[gd_scene load_steps=8 format=2]

[ext_resource path="res://environment/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://environment/tree/Tree.gd" type="Script" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://interface/UI.gd" type="Script" id=5]
[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 6 )

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 576, 928 )

[node name="Tree" type="Position2D" parent="."]
position = Vector2( 360.257, 896 )
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLeft" type="ProgressBar" parent="CanvasLayer/UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -89.0
margin_top = 46.0
margin_right = 89.0
margin_bottom = 83.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLevel" type="Label" parent="CanvasLayer/UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -166.55
margin_right = 240.0
margin_bottom = -46.5498
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="game_ended" from="." to="Player" method="_on_Game_game_ended"]
[connection signal="hit_by_axe" from="Player" to="." method="_on_Player_hit_by_axe"]
[connection signal="punched_tree" from="Player" to="Tree" method="_on_Player_punched_tree"]
[connection signal="punched_tree" from="Player" to="CanvasLayer/UI" method="_on_Player_punched_tree"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="time_up" from="CanvasLayer/UI" to="." method="_on_UI_time_up"]
